log
Tue, Apr 15, 2025  6:38:10 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^
cc1.exe: all warnings being treated as errors
eeef3b7
Tue, Apr 15, 2025  6:38:25 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^
cc1.exe: all warnings being treated as errors
e2ffb6b
